feat(group): findAll
